tests/suites/scctests/cc/error/0007-unmatchedcppif.c
/*
PATTERN:
0007-unmatchedcppif.c:9: error: #endif expected
.
*/

#ifdef FOO


